--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <div id="mocha"></div>
     <script src="node_modules/mocha/mocha.js"></script>
     <script src="node_modules/expect/umd/expect.min.js"></script>
+    <script src="node_modules/react/dist/react.js"></script>
+    <script src="node_modules/react-dom/dist/react-dom.js"></script>
     <script>mocha.setup('bdd');</script>
     <script src="test/index-test.js"></script>
   </body>
